[package]
name = "thirty_one_from_twelve"
version = "0.1.0"
authors = ["euwbah <euwbah@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
midir = "0.6.2"
midly = "0.4.0"
num-derive = "0.3.2"
num-traits = "0.2.12"
regex = "1.3.9"